fix: some popout headers looking out of place

--- a/src/components/_popouts.scss
+++ b/src/components/_popouts.scss
@@ -181,10 +181,6 @@ div[class*="layerContainer"] {
     div[class*="friendSelected"] {
       background: $surface0 !important;
     }
-
-    div[class*="header"] {
-      background: $mantle;
-    }
   }
 }
 
